--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link type="text/css" rel="stylesheet" href="./main.css">
-	<title>YYB粉丝站点 </title>
+	<title>ckv粉丝站点 </title>
 	<style type="text/css"></style>
 </head>
 <body>
 	<script src="./photo1.js"></script>
 	<script src="./photo2.js"></script>
-	<script src="./orzyyb.js"></script>
+	<script src="./orzckv.js"></script>
 	<div id="mainarea" align="center" style="margin-top:150px;">
 		<script>
 			function load() {
-				document.getElementById("mainarea").innerHTML="<button style=\"font-size: 24px\" onclick=\"orzyyb()\">点击免费膜yyb</button>";
+				document.getElementById("mainarea").innerHTML="<button style=\"font-size: 24px\" onclick=\"Orzckv()\">点击免费膜ckv</button>";
 			}
 			function about() {
-				document.getElementById("about").innerHTML="1. OrzYYB站点是xzz的个人娱乐站点，请勿当真！<br>2. YYB粉丝群：342062482；YYB的神仙博客：http://cnblogs.com/cjyyb。<br>3. 如果您想要在自己的博客中添加OrzYYB代码，请参见https://www.cnblogs.com/xzz_233/p/OrzYYB.html。<br>5.情侣站点：orzzsy</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/1131\">洛谷orzyyb主题</a>";
+				document.getElementById("about").innerHTML="1. Orzckv站点是phinney的个人娱乐站点，请勿当真！<br>2. ckv粉丝群：暂无；ckv的神仙博客：https://www.cnblogs.com/ck6100lgev2。<br>3. 如果您想要在自己的博客中添加Orzckv代码，请参见https://www.cnblogs.com/xzz_233/p/Orzyyb.html。<br>5.情侣站点：orzzvz</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/25802\">洛谷orzckv主题</a>";
 		}
 		</script>
-		<h1 style="color:red">Do you want to OrzYYB?</h1>
+		<h1 style="color:red">Do you want to Orzckv?</h1>
 		<button style="font-size: 24px" onclick="load()">Yes!</button>
 	</div>
 	<div style="background:rgba(255,255,255,0.7);text-align:center; font-family: 黑体;font-weight: bold;margin-top:100px">
-		Copyright © xzz_233 2019<br>
-		转载请注明出处（https://yyb.akioi.cn 或 https://github.com/xzz-233/orzyyb）<br>
+		Copyright © fzyxh 2019<br>
+		转载请注明出处（https://ckv.akioi.cn 或 https://github.com/fzyxh/orzckv）<br>
 		<div id="about"></div>
-		<a href="javascript:about()">关于orzyyb</a>
+		<a href="javascript:about()">关于orzckv</a>
 		<br>
-		<a href="./wiki">yyb wiki（逐步上线中，欢迎Issue）</a>
+		<a href="./wiki">ckv wiki（逐步上线中，欢迎Issue）</a>
 	</div>
 </body>
 
