--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				document.getElementById("mainarea").innerHTML="<button style=\"font-size: 24px\" onclick=\"Orzckv()\">点击免费膜ckv</button>";
 			}
 			function about() {
-				document.getElementById("about").innerHTML="1. Orzckv站点是phinney的个人娱乐站点，请勿当真！<br>2. ckv粉丝群：暂无；ckv的神仙博客：https://www.cnblogs.com/ck6100lgev2。<br>3. 如果您想要在自己的博客中添加Orzckv代码，请参见https://www.cnblogs.com/xzz_233/p/Orzyyb.html。<br>5.情侣站点：orzzvz</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/25802\">洛谷orzckv主题</a>";
+				document.getElementById("about").innerHTML="1. Orzckv站点是phinney的个人娱乐站点，请勿当真！<br>2. ckv粉丝群：930227092；ckv的神仙博客：https://www.cnblogs.com/ck6100lgev2。<br>3. 如果您想要在自己的博客中添加Orzckv代码，请参见https://www.cnblogs.com/xzz_233/p/Orzyyb.html。<br>5.情侣站点：orzzvz</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/25802\">洛谷orzckv主题</a>";
 		}
 		</script>
 		<h1 style="color:red">Do you want to Orzckv?</h1>
