--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div style="background:rgba(255,255,255,0.7);text-align:center; font-family: 黑体;font-weight: bold;margin-top:100px">
 		Copyright © fzyxh 2019<br>
-		转载请注明出处（https://ckv.akioi.cn 或 https://github.com/fzyxh/orzckv）<br>
+		转载请注明出处（<a href="https://ckv.akioi.cn">ckv.akioi.cn</a> 或 <a href="https://github.com/fzyxh/orzckv">github-fzyxh</a>）<br>
 		<div id="about"></div>
 		<a href="javascript:about()">关于orzckv</a>
 		<br>
