--- a/wiki/index.html
+++ b/wiki/index.html
@@ -2,13 +2,13 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link type="text/css" rel="stylesheet" href="./main.css">
-	<title>YYB粉丝站点 - YYBwiki</title>
+	<title>CKV粉丝站点 - CKVwiki</title>
 	<style type="text/css"></style>
 </head>
 <body>
 <div class="ui container">
 <a class="item active" href="/">返回主站</a>
-<a class="header item" href="./">YYB wiki</a>
+<a class="header item" href="./">CKV wiki</a>
 <div>
 欢迎各位Issue。
 咕咕咕
