--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 				document.getElementById("mainarea").innerHTML="<button style=\"font-size: 24px\" onclick=\"Orzckv()\">点击免费膜ckv</button>";
 			}
 			function about() {
-				document.getElementById("about").innerHTML="1. Orzckv站点是fzyxh的个人娱乐站点，请勿当真！<br>2. ckv粉丝群：<a target=\"_blank\" href=\"https://jq.qq.com/?_wv=1027&k=58fP14K\">930227092</a>；ckv的神仙博客：<a href=\"https://www.cnblogs.com/ck6100lgev2\">https://www.cnblogs.com/ck6100lgev2</a>。<br>3. 如果您想要在自己的博客中添加Orzckv代码，请参见https://www.cnblogs.com/xzz_233/p/Orzyyb.html。<br>5.情侣站点：orzzyx</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/25802\">洛谷orzckv主题</a>以及<a href=\"https://www.luogu.com.cn/theme/design/25805\">洛谷srO CKV Orz主题</a>";
-		}
+				document.getElementById("about").innerHTML="1. Orzckv站点是fzyxh的个人娱乐站点，请勿当真！<br>2. ckv粉丝群：<a target=\"_blank\" href=\"https://jq.qq.com/?_wv=1027&k=58fP14K\">930227092</a>；ckv的神仙博客：<a href=\"https://www.cnblogs.com/ck6100lgev2\">https://www.cnblogs.com/ck6100lgev2</a>。<br>3. 如果您想要在自己的博客中添加Orzckv代码，请参见https://www.cnblogs.com/xzz_233/p/Orzyyb.html。<br>5.情侣站点：orzzyx</a><br>6. 欢迎使用<a href=\"https://www.luogu.org/theme/design/25802\">洛谷orzckv主题</a>以及<a href=\"https://www.luogu.com.cn/theme/design/25805\">洛谷srO CKV Orz主题</a><br><a href=\"javascript:del_about()\">收起</a>";
+			}
+			function del_about() {
+				document.getElementById("about").innerHTML="";
+			}
 		</script>
 		<h1 style="color:red">Do you want to Orzckv?</h1>
 		<button style="font-size: 24px" onclick="load()">Yes!</button>
